# RankBot

./: .gitignore  Cargo.toml  common_words.txt
entity/: Cargo.toml
entity/src/entities/: channels.rs  guilds.rs  messages.rs  mod.rs  prelude.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231013_004433_snowflake_primary.rs  m20231015_012152_float_score.rs  m20231016_192446_time.rs
src/: common_words.rs  db.rs  logging.rs  main.rs  message_analyzer.rs  scores.rs
src/commands/: leaderboard.rs  messages.rs  mod.rs  stats.rs  tests.rs
src/handlers/: message.rs
