[package]
name = "rank_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
serenity = { version="0.11.5", features = [ "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend"], default-features = false }
env-file-reader = "0.3.0"
tokio = { version = "1.23.0", features = ["full"] }
poise = "0.5.2"
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.23"
lru = "0.9.0"
sea-orm = { version = "0.10.6", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
async-recursion = "1.0.0"
rayon = "1.6"
futures = "0.3.25"
indicatif = { version = "0.17.3", features = ["tokio"] }