[package]
name = "rank_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
serenity = { version="0.11.6", features = [ "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend"], default-features = false }
env-file-reader = "0.3.0"
tokio = { version = "1.33.0", features = ["full"] }
poise = "0.5.6"
log = "0.4.20"
fern = "0.6.2"
chrono = "0.4.31"
lru = "0.12.0"
sea-orm = { version = "0.12.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
async-recursion = "1.0.5"
rayon = "1.8.0"
futures = "0.3.28"
indicatif = { version = "0.17.7", features = ["tokio"] }
async-iterator = "2.2.0"
num-format = "0.4.4"