[package]
name = "rank_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
serenity = { version= "0.12.1", features = [ "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend"], default-features = false }
serenity-self = {package = "serenity", git = "https://github.com/nshout/serenity-self", features = ["framework", "standard_framework"]}
env-file-reader = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }
poise = "0.6.1"
log = "0.4.21"
fern = "0.6.2"
chrono = "0.4.35"
lru = "0.12.3"
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
async-recursion = "1.1.0"
rayon = "1.10.0"
futures = "0.3.30"
indicatif = { version = "0.17.8", features = ["tokio"] }
async-iterator = "2.2.0"
num-format = "0.4.4"
